--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
   },
   "homepage": "https://github.com/josegrq/Sweat#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.17.1",
     "http-status-codes": "^2.1.4",
+    "method-override": "^3.0.0",
     "mongoose": "^5.12.2",
-    "mongoose-seed": "^0.6.0"
+    "mongoose-seed": "^0.6.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
