--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/josegrq/Sweat#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
@@ -29,6 +30,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.12.2",
     "mongoose-seed": "^0.6.0",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-local-mongoose": "^6.1.0"
   }
