--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "express-validator": "^5.3.1",
     "http-status-codes": "^2.1.4",
     "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.2",
     "mongoose-seed": "^0.6.0",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "socket.io": "^4.0.1"
   }
 }
